--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   provider: ^6.0.3
   file_picker: ^4.6.0
   aes_crypt_null_safe: ^2.0.2
+  carousel_slider: ^4.1.1
 
 dev_dependencies:
   flutter_test:
