Added pull down to refresh behaviour. Closes #12.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   aes_crypt_null_safe: ^2.0.2
   photo_view: ^0.14.0
   permission_handler: ^9.2.0
+  custom_refresh_indicator: ^1.2.0
 
 dev_dependencies:
   flutter_test:
