--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   photo_view: ^0.14.0
   permission_handler: ^9.2.0
   custom_refresh_indicator: ^1.2.0
+  image: ^3.2.0
 
 dev_dependencies:
   flutter_test:
